[package]
name = "runesh-notify"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Notification dispatch: webhook, email (SMTP), Slack, Teams, Discord, Matrix, Ntfy channels with templates"

[features]
default = []
email = ["dep:lettre"]
# Exposes `WebhookUrlPolicy::insecure_any_host_for_testing`, which disables
# the private-IP guard so tests can post to a localhost bind. Never enable
# this on a shipped binary.
insecure-test-policy = []

[dependencies]
tokio = { workspace = true, features = ["time", "net", "sync", "rt"] }
tracing = { workspace = true }
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
rand = { workspace = true }

# Optional: SMTP email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
